--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,15 @@ services:
       - "8070:8069" # se especifica el puerto por el cual vamos a dar salida a Odoo
     volumes:
        - odoo-web-14:/var/lib/odoo
+       - ./odoo/odoo:/usr/lib/python3/dist-packages/odoo
+       - ./enterprise:/mnt/enterprise
        - ./config:/etc/odoo
        - ./extra-addons:/mnt/extra-addons
     links:
       - db_odoo:db
     restart: always
+    networks:
+      - bridge
   db_odoo:
     container_name: postgresql_12
     image: postgres:12.5
@@ -27,6 +31,11 @@ services:
     volumes:
       - odoo-db-14:/var/lib/postgresql/data/pgdata
     restart: always
+    networks:
+      - bridge
 volumes:
   odoo-web-14:
   odoo-db-14:
+networks:
+   bridge:
+    driver: bridge
